Add common technical indicators as a submodule